[package]
name = "hyperlane-ism-blueprint-template"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint template for building Hyperlane ISMs"
authors = ["Tangle Network <drew@tangle.tools>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/hyperlane-ism-blueprint-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
color-eyre = "0.6"
gadget-sdk = "0.5.1"
tracing = "0.1"
tokio = "1.41.1"

[features]
default = ["std"]
std = ["gadget-sdk/std"]

[build-dependencies]
blueprint-metadata = "0.1.7"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hyperlane-ism-blueprint-template"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "HelloBlueprint" }

[[package.metadata.gadget.Native.sources]]
owner = "tangle-network"
repo = "hyperlane-ism-blueprint-template"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-hyperlane-ism-blueprint-template-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-hyperlane-ism-blueprint-template-gadget" },
]
